[Style] (FIX) add white-space: pre-wrap for line separation in html (can't separate by line breaks or br tags currently)

--- a/src/widgets/style_dark.css
+++ b/src/widgets/style_dark.css
@@ -147,6 +147,7 @@ ul.btwb-result-list li .athlete-image{
   margin:0px 0px 0px 0px;
   padding:0px 0px 0px 0px;
   color:#F0F8FF;
+  white-space: pre-wrap;
 }
 .btwb-wod-list h5{
   margin:0px 0px 0px 0px;
